--- a/css/style.css
+++ b/css/style.css
@@ -31,18 +31,18 @@ p {
 }
 
 section {
-	border:	1px solid black;
-	background-color: #00FF99;
+	border:	1px solid #67803B;
+	background-color: #B4BD00;
 	width: 100%;
 	height: 200px;
-	font-family: Helvetica;
-	color: black;
+	font-family: 'Roboto', sans-serif;
+	color: #1C350E;
 	position: relative;
 	overflow: auto;
 }
 
 #chicken {
-	border: 1px solid black;
+	border: 1px solid #67803B;
 	text-align: center;
 	width: 30%;
 	margin-left: 70%;
@@ -56,7 +56,7 @@ section {
 }
 
 #beef {
-	border: 1px solid black;
+	border: 1px solid #67803B;
 	text-align: center;
 	width: 30%;
 	margin-left: 70%;
@@ -70,7 +70,7 @@ section {
 }
 
 #sushi {
-	border: 1px solid black;
+	border: 1px solid #67803B;
 	text-align: center;
 	width: 30%;
 	margin-left: 70%;
